# glimmr

./: .gitignore  README.md  pyproject.toml
src/: ascii.py  avg_3_frame.py  convolution.py  escher_pattern.py  gauss_diff.py  glitch.py  img2vid.py  many_img2vid.py  mi2v.py  pixelate.py  pointillism.py
src/gui/: GLITCH_STATIC_IMAGE.py  blah.py  glimmr_gui.py  menus.py  root.py  slider.py
